[package]
name = "get-field-by-type"
authors = [ "Ben <kaleidawave@gmail.com>" ]
description = "Get a value of field, based on the type of a field"
version = "0.0.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/kaleidawave/get-field-by-type"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
get-field-by-type-derive = { version = "0.0.0", path = "../get-field-by-type-derive" }
